[project]
name = "kemono-downloader"
version = "0.1.0"
description = ""
authors = [
    {name = "phillychi3",email = "phillychi3@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "fake-useragent (>=2.2.0,<3.0.0)",
    "progress (>=1.6,<2.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
